# dsga

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DETAILS.md  DOCUMENTATION.md  README.md  assignment_test.cxx  common_initial_sequence.hxx  comparison_test.cxx  constructor_test.cxx  conversion_test.cxx  cxcm.hxx  dsga.hxx  dsga.natvis  dsga.vcxproj  dsga.vcxproj.filters  examples.cxx  examples.hxx  function_test.cxx  main.cxx  operator_test.cxx  swizzle_test.cxx
.github/ISSUE_TEMPLATE/: alternate-implementation-suggestion.md  bug_report.md  feature_request.md
VS2019/: dsga.natvis  dsga.sln  dsga.vcxproj  dsga.vcxproj.filters
VS2022/: dsga.natvis  dsga.vcxproj  dsga.vcxproj.filters
docs/: API.md  CHANGELOG.md  DETAILS.md  DOCUMENTATION.md  LAMBDA_PACK_WRAPPER.md  MOTIVATION.md  dsga.puml
examples/: angle.hxx  basic.hxx  bezier.hxx  compare.hxx  format_output.hxx  hash.hxx  ostream_output.hxx  output.hxx  slice.hxx  span_convert.hxx  stl.cxx  stl.hxx  tolerance.hxx  valarray_convert.hxx
include/: dsga.hxx
src/: main.cxx  nanobench.cxx
tests/: assignment_test.cxx  comparison_test.cxx  constructor_test.cxx  conversion_test.cxx  function_test.cxx  operator_test.cxx  swizzle_test.cxx  traits_test.cxx  utility_test.cxx
vscode/: dsga-vscode.natvis
